--- a/pom.xml
+++ b/pom.xml
@@ -1,89 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.javaschool</groupId>
+  <artifactId>railway-tablo</artifactId>
+  <version>1.0</version>
+  <packaging>pom</packaging>
+  <name>tablo</name>
+  <modules>
+    <module>logic</module>
+    <module>view</module>
+    <module>ear</module>
+  </modules>
 
-    <groupId>javaschool</groupId>
-    <artifactId>railwaytablo</artifactId>
-    <version>1.0</version>
-    <modules>
-        <module>railwaytablo-ejb</module>
-        <module>railwaytablo-ear</module>
-        <module>railwaytablo-web</module>
-    </modules>
-    <packaging>pom</packaging>
+  <properties>
+    <lombok.version>1.18.0</lombok.version>
+    <hibernate-validator.version>6.0.11.Final</hibernate-validator.version>
+    <hibernate-core.version>5.2.17.Final</hibernate-core.version>
+  </properties>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
-        <version.jboss.bom>8.2.1.Final</version.jboss.bom>
-        <version.wildfly>10.1.0.Final</version.wildfly>
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
-        <version.compiler.plugin>3.1</version.compiler.plugin>
-        <version.ear.plugin>2.10</version.ear.plugin>
-        <version.ejb.plugin>2.3</version.ejb.plugin>
-        <version.surefire.plugin>2.16</version.surefire.plugin>
-        <version.war.plugin>2.5</version.war.plugin>
-        <logback.version>1.2.3</logback.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <lombok.version>1.18.0</lombok.version>
-
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.wildfly.bom</groupId>
-            <artifactId>jboss-javaee-7.0-with-tools</artifactId>
-            <version>${version.jboss.bom}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.wildfly.bom</groupId>
-            <artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
-            <version>${version.jboss.bom}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.wildfly.plugins</groupId>
-                    <artifactId>wildfly-maven-plugin</artifactId>
-                    <version>${version.wildfly.maven.plugin}</version>
-                    <inherited>true</inherited>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
+  </dependencies>
 </project>
